--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -22,51 +22,9 @@
             <hr>
           </div>
         </form>
-        <button class="btn btn-block btn-facebook" ng-click="authenticate('facebook')">
+        <button class="btn btn-block btn-facebook" ng-click="loginClick()">
           <i class="ion-social-facebook"></i> Sign in with Facebook
         </button>
-        <button class="btn btn-block btn-google-plus" ng-click="authenticate('google')">
-          <span class="ion-social-googleplus"></span>Sign in with Google
-        </button>
-        <button class="btn btn-block btn-linkedin" ng-click="authenticate('linkedin')">
-          <i class="ion-social-linkedin"></i> Sign in with LinkedIn
-        </button>
-        <button class="btn btn-block btn-instagram" ng-click="authenticate('instagram')">
-          <i class="ion-social-instagram"></i> Sign in with Instagram
-        </button>
-        <button class="btn btn-block btn-twitter" ng-click="authenticate('twitter')">
-          <i class="ion-social-twitter"></i> Sign in with Twitter
-        </button>
-        <button class="btn btn-block btn-foursquare" ng-click="authenticate('foursquare')">
-          <i class="fa fa-foursquare"></i> Sign in with Foursquare
-        </button>
-        <button class="btn btn-block btn-github" ng-click="authenticate('github')">
-          <i class="ion-social-github"></i> Sign in with GitHub
-        </button>
-        <button class="btn btn-block btn-bitbucket" ng-click="authenticate('bitbucket')">
-          <i class="fa fa-bitbucket"></i> Sign in with Bitbucket
-        </button>
-        <button class="btn btn-block btn-yahoo" ng-click="authenticate('yahoo')">
-          <i class="ion-social-yahoo"></i> Sign in with Yahoo
-        </button>
-        <button class="btn btn-block btn-live" ng-click="authenticate('live')">
-          <i class="ion-social-windows"></i> Sign in with Windows Live
-        </button>
-        <button class="btn btn-block btn-twitch" ng-click="authenticate('twitch')">
-          <i class="ion-social-twitch"></i> Sign in with Twitch
-        </button>
       </div>
-    <p>
-    This is the Ionic starter for tabs-based apps. For other starters and ready-made templates, check out the <a href="http://market.ionic.io/starters" target="_blank">Ionic Market</a>.
-    </p>
-    <p>
-      To edit the content of each tab, edit the corresponding template file in <code>www/templates/</code>. This template is <code>www/templates/tab-dash.html</code>
-    </p>
-    <p>
-    If you need help with your app, join the Ionic Community on the <a href="http://forum.ionicframework.com" target="_blank">Ionic Forum</a>. Make sure to <a href="http://twitter.com/ionicframework" target="_blank">follow us</a> on Twitter to get important updates and announcements for Ionic developers.
-    </p>
-    <p>
-      For help sending push notifications, join the <a href="https://apps.ionic.io/signup" target="_blank">Ionic Platform</a> and check out <a href="http://docs.ionic.io/docs/push-overview" target="_blank">Ionic Push</a>. We also have other services available.
-    </p>
   </ion-content>
 </ion-view>
