--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,4 +1,5 @@
 <ion-view view-title="Dashboard">
+  
   <ion-content class="padding">
     <h2>Welcome to Ionic</h2>
     <div class="panel-body">
@@ -12,7 +13,7 @@
             <input class="form-control input-lg ng-pristine ng-untouched ng-invalid ng-invalid-required" type="password" name="password" ng-model="user.password" placeholder="Password" required="">
             <span class="ion-key form-control-feedback"></span>
           </div>
-          <button type="submit" ng-disabled="loginForm.$invalid" class="btn btn-lg  btn-block btn-success" disabled="disabled">Log in</button>
+          <button type="submit" ng-disabled="loginForm.$invalid" class="btn btn-lg  btn-block btn-success" disabled="disabled" ng-click="loginClick()">Log in</button>
           <br>
           <p class="text-center text-muted">
             <small>Don't have an account yet? <a href="/#/signup">Sign up</a></small>
@@ -22,7 +23,7 @@
             <hr>
           </div>
         </form>
-        <button class="btn btn-block btn-facebook" ng-click="loginClick()">
+        <button class="btn btn-block btn-facebook" >
           <i class="ion-social-facebook"></i> Sign in with Facebook
         </button>
       </div>
