--- a/www/templates/chat-detail.html
+++ b/www/templates/chat-detail.html
@@ -4,11 +4,27 @@
   The FriendsCtrl pulls data from the Friends service (service.js)
   The Friends service returns an array of friend data
 -->
-<ion-view view-title="{{chat.name}}">
+<ion-view view-title="{{referals.name}}">
   <ion-content class="padding">
-    <img ng-src="{{chat.face}}" style="width: 64px; height: 64px">
-    <p>
-      {{chat.lastText}}
-    </p>
+    <div class="list card" ng-repeat="ref in referals.referrals">
+      <img class="img-responsive img" src="{{ref.picture}}">
+      <img class="img-responsive img" src="{{ref.picture}}">
+      <div class="item item-avatar">
+
+        <!--<h2>Pretty Hate Machine</h2>-->
+        <!--<p>Nine Inch Nails</p>-->
+      <!--</div>-->
+
+      <!--<div class="item item-image">-->
+        <!--<img src="cover.jpg">-->
+      <!--</div>-->
+
+      <a class="item item-icon-left assertive" href="#">
+        <i class="icon ion-music-note"></i>
+        Start listening
+      </a>
+
+    </div>
+
   </ion-content>
 </ion-view>
