--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -1,30 +1,29 @@
-<ion-header-bar align-title="left" class="bar-referal">
-  <div class="buttons">
-    <button class="button" ng-click="doSomething()">Left Button</button>
-  </div>
-  <h1 class="title">Title!</h1>
-  <div class="buttons">
-    <button class="button">Right Button</button>
-  </div>
-</ion-header-bar>
+<!--<ion-header-bar align-title="left" class="bar-referal">-->
+  <!--<div class="buttons">-->
+    <!--<button class="button" ng-click="doSomething()">Left Button</button>-->
+  <!--</div>-->
+  <!--<h1 class="title">Title!</h1>-->
+  <!--<div class="buttons">-->
+    <!--<button class="button">Right Button</button>-->
+  <!--</div>-->
+<!--</ion-header-bar>-->
 
 
 <ion-view view-title="Referals">
   <ion-nav-buttons side="primary">
-      <button class="button" ng-click="doSomething()">
-      
-      </button>
+      <!--<button class="button" ng-click="doSomething()">-->
+
+      <!--</button>-->
       <i class="ion-ios-search pull-right"></i>
     </ion-nav-buttons>
   <ion-content>
     <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-right" style="box-shadow: 0px 1px 5px #796F6F;margin-bottom: 2px;" ng-repeat="chat in referals" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
-        <img class="media-object" data-src="holder.js/64x64" alt="64x64" src="data:image/svg+xml;charset=UTF-8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2264%22%20height%3D%2264%22%20viewBox%3D%220%200%2064%2064%22%20preserveAspectRatio%3D%22none%22%3E%3C!--%0ASource%20URL%3A%20holder.js%2F64x64%0ACreated%20with%20Holder.js%202.8.2.%0ALearn%20more%20at%20http%3A%2F%2Fholderjs.com%0A(c)%202012-2015%20Ivan%20Malopinsky%20-%20http%3A%2F%2Fimsky.co%0A--%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%3C!%5BCDATA%5B%23holder_154438be4ce%20text%20%7B%20fill%3Argba(255%2C255%2C255%2C.75)%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A10pt%20%7D%20%5D%5D%3E%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_154438be4ce%22%3E%3Crect%20width%3D%2264%22%20height%3D%2264%22%20fill%3D%22%23777%22%2F%3E%3Cg%3E%3Ctext%20x%3D%2213.84375%22%20y%3D%2236.4390625%22%3E64x64%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" data-holder-rendered="true" style="width: 64px; height: 64px;">
-        
-        <h2>{{chat.name}}</h2>
-        <p>{{chat.name}}</p>
-        <i class="icon ion-chevron-right icon-accessory"></i>
-        <span class="badge" style="top: 28px;right: 45px;background-color:#4B3384" >0</span>
+        <img class="img img-responsive img-thumbnail" ng-src="{{chat.icons}}">
+
+        <h2 class="list-title">{{chat.name}}</h2>
+        <!--<i class="icon ion-chevron-right icon-accessory"></i>-->
+        <span class="badge" style="top: 28px;right: 45px;background-color:#4B3384" >{{chat.referrals.length}}</span>
         <ion-option-button class="button-assertive" ng-click="remove(chat)">
           Delete
         </ion-option-button>
