--- a/www/css/style.css
+++ b/www/css/style.css
@@ -427,12 +427,41 @@ ul {
   .bar.bar-stable .title {
     background-color: #5FB9AD;
     color: white;
-    
+
   }
   .bar-stable.bar.bar-header {
     background-color: #5FB9AD;
     color: white;
         margin-left: 0px;
-    
-    
+
+
   }
+.item .list-title {
+  margin-top:10px;
+  font-family: "Roboto", serif;
+
+}
+.item-avatar .item-content > img:first-child {
+  position: absolute;
+  top: 16px;
+  left: 16px;
+  max-width: 45px;
+  max-height: 45px;
+  width: 100%;
+  height: 100%;
+ border-radius: 0;
+}
+.home-icon {
+  background: url("../img/ic_home_white_24px.svg") no-repeat;
+  height:auto;
+  width:100px;
+}
+.tabs-striped .tabs {
+  background-color:#5D5959;
+}
+.tab-nav .tabs{
+  background-color:#5D5959;
+}
+.tabs {
+  background-color:gray;
+}
