--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,8 +1,11 @@
-<ion-view view-title="Dashboard">
-  
-  <ion-content class="padding">
-    <h2>Welcome to Ionic</h2>
-    <div class="panel-body">
+<ion-view view-title="Dashboard" >
+
+  <ion-content class="padding" style="background-color:#1A7C6F">
+
+    <div class="panel-body" style="background: url('')">
+      <div style="width:100%">
+        <img style="margin:0 auto;" class="img img-responsive" src="img/logot-login.png">
+      </div>
         <h2 class="text-center">Log in</h2>
         <form method="post" ng-submit="login()" name="loginForm" class="ng-pristine ng-invalid ng-invalid-required">
           <div class="form-group has-feedback">
@@ -27,5 +30,6 @@
           <i class="ion-social-facebook"></i> Sign in with Facebook
         </button>
       </div>
+
   </ion-content>
 </ion-view>
