--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -16,7 +16,7 @@
             <input class="form-control input-lg ng-pristine ng-untouched ng-invalid ng-invalid-required" type="password" name="password" ng-model="user.password" placeholder="Password" required="">
             <span class="ion-key form-control-feedback"></span>
           </div>
-          <button type="submit" ng-disabled="loginForm.$invalid" class="btn btn-lg  btn-block btn-success" disabled="disabled" ng-click="loginClick()">Log in</button>
+          <button type="submit" ng-disabled="loginForm.$invalid" class="btn btn-lg  btn-block btn-success" disabled="disabled" ng-click="loginClick()" style="color:white">Log in</button>
           <br>
           <p class="text-center text-muted">
             <small>Don't have an account yet? <a href="/#/signup">Sign up</a></small>
