--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -29,5 +29,8 @@
         </ion-option-button>
       </ion-item>
     </ion-list>
+
+    <button ng-click="getPhoto()" class="button button-block button-primary">Take Photo</button>
+    <img ng-src="{{lastPhoto}}" style="max-width: 100%">
   </ion-content>
 </ion-view>
