--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -30,6 +30,6 @@
           <i class="ion-social-facebook"></i> Sign in with Facebook
         </button>
       </div>
-
+    <!-- Accent-colored raised button with ripple -->
   </ion-content>
 </ion-view>
