--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,14 +6,14 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Home" icon-off="home-icon" icon-on="home-icon" href="#/tab/dash">
+  <ion-tab title="Home" icon-off="ion-ios-gear" icon-on="ion-ios-gear" href="#/tab/dash">
     <ion-nav-view name="tab-dash"></ion-nav-view>
   </ion-tab>
   <!--<ion-tab title="Explore" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/chats">-->
   <!--  <ion-nav-view name="tab-chats"></ion-nav-view>-->
   <!--</ion-tab>-->
   <!-- Chats Tab -->
-  <ion-tab title="Explore" icon-off="ion-ios-chatboxes-outline" icon-on="home-icon" href="#/tab/chats">
+  <ion-tab title="Explore" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-gear" href="#/tab/chats">
     <ion-nav-view name="tab-chats"></ion-nav-view>
   </ion-tab>
 
