--- a/www/templates/tab-home.html
+++ b/www/templates/tab-home.html
@@ -46,9 +46,9 @@
       </p>
     </ion-slide>
   </ion-slide-box>
-  <div class="row poll">
-    <poll poll-data="data.pollData" ng-click="goTo('needs/200')"></poll>
-  </div>
+  <!--<div class="row poll">-->
+    <!--<poll poll-data="data.pollData" ng-click="goTo('needs/200')"></poll>-->
+  <!--</div>-->
     <div class="row">
 
     </div>
