--- a/www/templates/modal-photo.html
+++ b/www/templates/modal-photo.html
@@ -1,52 +1,61 @@
-<!--<ion-modal-view>-->
+<ion-modal-view>
 
-  <!--<ion-header-bar class="bar general-nav-bar">-->
-    <!--<h1 class="title" style="color:white">Photos</h1>-->
-    <!--<button style="color:white" class="button button-icon icon ion-android-close" ng-click="modal.hide()"></button>-->
-    <!--&lt;!&ndash;<button style="color:white" class="button button-icon icon" ng-click="closeModal.hide()">Next</button>&ndash;&gt;-->
+  <ion-header-bar class="bar general-nav-bar">
+    <h1 class="title" style="color:white">Photos</h1>
+    <button style="color:white" class="button button-icon icon ion-android-close" ng-click="modal.hide()"></button>
+    <!--<button style="color:white" class="button button-icon icon" ng-click="closeModal.hide()">Next</button>-->
 
-  <!--</ion-header-bar>-->
-
-  <!--<ion-content class="padding" scroll="true">-->
-    <!--<ion-spinner></ion-spinner>-->
-  <!--<img style="width:100%;height:auto;" ng-src="{{picture}}">-->
-    <!--<img style="width:100%;height:auto;" ng-if=!picture ng-src="img/Untitled.png">-->
-   <!--<div class="row">-->
-     <!--<div class="col">-->
-    <!--<button class="button photo-button" ng-click="refer()">-->
-      <!--Refer-->
-    <!--</button>-->
-     <!--</div>-->
-     <!--<div class="col">-->
-       <!--<button class="button photo-button" ng-click="send()">-->
-         <!--Send-->
-       <!--</button>-->
-     <!--</div>-->
-   <!--</div>-->
-  <!--</ion-content>-->
-<!--</ion-modal-view>-->
-
-<ion-view view-title="Referals">
-  <ion-nav-buttons side="primary">
-    <!--<button class="button" ng-click="doSomething()">-->
-
-    <!--</button>-->
-    <!--<i class="ion-ios-search pull-right"></i>-->
-  </ion-nav-buttons>
-  <ion-content>
-    <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" style="box-shadow: 0px 1px 5px #796F6F;margin-bottom: 2px;" ng-repeat="chat in referals" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
-        <img class="img img-responsive img-thumbnail" ng-src="{{chat.icons}}">
-
-        <h2 class="list-title">{{chat.name}}</h2>
-        <!--<i class="icon ion-chevron-right icon-accessory"></i>-->
-        <span class="badge" style="top: 28px;right: 45px;background-color:#4B3384" >{{chat.referrals.length}}</span>
-        <ion-option-button class="button-assertive" ng-click="remove(chat)">
-          Delete
-        </ion-option-button>
-      </ion-item>
-    </ion-list>
+  </ion-header-bar>
+  <ion-nav-bar class="bar-stable" style="color:white">
 
 
+    <ion-nav-back-button class="button-clear">
+      <i class="ion-arrow-left-c" style="color:white"></i>
+    </ion-nav-back-button>
+
+
+  </ion-nav-bar>
+  <ion-content class="padding" scroll="true">
+    <ion-spinner></ion-spinner>
+  <img style="width:100%;height:auto;" ng-src="{{picture}}">
+    <img style="width:100%;height:auto;" ng-if=!picture ng-src="img/Untitled.png">
+   <div class="row">
+     <div class="col">
+    <button class="button photo-button" ng-click="refer()">
+      Refer
+    </button>
+     </div>
+     <div class="col">
+       <button class="button photo-button" ng-click="send()">
+         Send
+       </button>
+     </div>
+   </div>
+    <button ng-click="pickContactUsingNativeUI()">PICK CONTACTS</button>
   </ion-content>
-</ion-view>
+</ion-modal-view>
+
+<!--<ion-view view-title="Referals">-->
+  <!--<ion-nav-buttons side="primary">-->
+    <!--&lt;!&ndash;<button class="button" ng-click="doSomething()">&ndash;&gt;-->
+
+    <!--&lt;!&ndash;</button>&ndash;&gt;-->
+    <!--&lt;!&ndash;<i class="ion-ios-search pull-right"></i>&ndash;&gt;-->
+  <!--</ion-nav-buttons>-->
+  <!--<ion-content>-->
+    <!--<ion-list>-->
+      <!--<ion-item class="item-remove-animate item-avatar item-icon-right" style="box-shadow: 0px 1px 5px #796F6F;margin-bottom: 2px;" ng-repeat="chat in referals" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">-->
+        <!--<img class="img img-responsive img-thumbnail" ng-src="{{chat.icons}}">-->
+
+        <!--<h2 class="list-title">{{chat.name}}</h2>-->
+        <!--&lt;!&ndash;<i class="icon ion-chevron-right icon-accessory"></i>&ndash;&gt;-->
+        <!--<span class="badge" style="top: 28px;right: 45px;background-color:#4B3384" >{{chat.referrals.length}}</span>-->
+        <!--<ion-option-button class="button-assertive" ng-click="remove(chat)">-->
+          <!--Delete-->
+        <!--</ion-option-button>-->
+      <!--</ion-item>-->
+    <!--</ion-list>-->
+
+
+  <!--</ion-content>-->
+<!--</ion-view>-->
