--- a/www/templates/modal-send.html
+++ b/www/templates/modal-send.html
@@ -1,8 +1,8 @@
 <ion-modal-view>
 
   <ion-header-bar class="bar general-nav-bar">
-    <h1 class="title" style="color:white">Photos</h1>
-    <button style="color:white" class="button button-icon icon ion-android-close" ng-click="closeModal.hide()"></button>
+    <h1 class="title" style="color:white">Send</h1>
+    <button style="color:white" class="button button-icon icon ion-android-close pull-left" ng-click="closeModal()"></button>
     <!--<button style="color:white" class="button button-icon icon" ng-click="closeModal.hide()">Next</button>-->
 
   </ion-header-bar>
@@ -17,6 +17,23 @@
           <div class="col">
 
           </div>
+        </div>
+        <div class="row">
+          <div class="list">
+
+            <label class="item item-input item-select">
+              <div class="input-label">
+                Lightsaber
+              </div>
+              <select>
+                <option>Blue</option>
+                <option selected>Green</option>
+                <option>Red</option>
+              </select>
+            </label>
+
+          </div>
+
         </div>
        </div>
     </div>
