--- a/www/templates/tab-explore.html
+++ b/www/templates/tab-explore.html
@@ -17,6 +17,12 @@
       <!--<i class="ion-ios-search pull-right"></i>-->
     </ion-nav-buttons>
   <ion-content>
+    <div>
+      <span>{{dato.x}}</span>
+      <span>{{dato.y}}</span>
+      <span>{{dato.z}}</span>
+      {{dato.pedometerData}}
+    </div>
     <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-right" style="box-shadow: 0px 1px 5px #796F6F;margin-bottom: 2px;" ng-repeat="chat in referals" type="item-text-wrap" href="#/tabs/explore/{{chat.id}}">
         <img class="img img-responsive img-thumbnail" ng-src="{{chat.icons}}">
