--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -41,7 +41,7 @@ navigation history that also transitions its views in and out.
     <ion-nav-view name="home-tab"></ion-nav-view>
   </ion-tab>
   <ion-tab title="Explore" icon="ion-map" ui-sref="tabs.explore"">
-    <ion-nav-view name="home-explore"></ion-nav-view>
+    <ion-nav-view name="tab-explore"></ion-nav-view>
   </ion-tab>
 
   <ion-tab title="About" icon="ion-ios-information" href="#/tab/login">
@@ -58,6 +58,9 @@ navigation history that also transitions its views in and out.
   </ion-tab>
   <ion-tab title="Login" icon="ion-ios-world" href="#/tab/chats">
     <ion-nav-view name="tab-chats"></ion-nav-view>
+  </ion-tab>
+  <ion-tab title="Play" icon="ion-ios-world" ui-sref="tabs.play">
+    <ion-nav-view name="tab-play"></ion-nav-view>
   </ion-tab>
 
 
